[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameAsset/GameEffectManager.gd" type="Script" id=1]
[ext_resource path="res://Modules/ShaderView/shader/blru.tres" type="Shader" id=2]
[ext_resource path="res://Modules/ShaderView/shader/halfTone.tres" type="Shader" id=3]
[ext_resource path="res://Modules/INTBackground/Prefab/MatrixManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameAsset/backGround/bg.png" type="Texture" id=5]
[ext_resource path="res://Modules/ShaderView/shader/color.tres" type="Shader" id=6]
[ext_resource path="res://GameAsset/BackGroundManager.gd" type="Script" id=7]
[ext_resource path="res://Modules/Dialogue/mainFont.tres" type="DynamicFont" id=8]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 6 )
shader_param/c = Plane( 1, 1, 1, 0 )

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/size = 9.0
shader_param/tw = 960.0
shader_param/th = 540.0
shader_param/c = Plane( 0, 0, 0, 0 )
shader_param/r = 1.6

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("backGround/show2/Viewport2")

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 3 )
shader_param/size = 7.0
shader_param/tw = 960.0
shader_param/th = 540.0
shader_param/c = null
shader_param/r = 2.6

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("shadow/show/Viewport2")

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 2 )
shader_param/ten = 1.0

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("shadow/show/Viewport2/temSprite1/Viewport1")

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("shadow/show/Viewport2/temSprite2/Viewport1")

[node name="GameEffectManager" type="Node"]
script = ExtResource( 1 )

[node name="matrix" type="CanvasLayer" parent="."]
layer = -9

[node name="MatrixManager" parent="matrix" instance=ExtResource( 4 )]

[node name="UIlayer" type="CanvasLayer" parent="."]
layer = 50

[node name="backGround" type="CanvasLayer" parent="."]
layer = -10
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="backGround"]
material = SubResource( 8 )
position = Vector2( 480, 270 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="backGround"]
margin_left = -306.0
margin_top = 190.0
margin_right = 1538.0
margin_bottom = 372.0
size_flags_stretch_ratio = 12.38
custom_fonts/font = ExtResource( 8 )
text = "This classic card game is called \"Old Maid.\"

Players take turns drawing cards from one
 another's hands, discarding them in pairs,
 aiming to be the first to deplete their hand.

The game is straightforward. Hope you enjoy!"
align = 1

[node name="show2" type="Sprite" parent="backGround"]
material = SubResource( 5 )
position = Vector2( 480, 270 )
texture = SubResource( 13 )

[node name="Viewport2" type="Viewport" parent="backGround/show2"]
process_priority = -8
size = Vector2( 960, 540 )
transparent_bg = true
render_target_v_flip = true

[node name="shadow" type="CanvasLayer" parent="."]
layer = -8

[node name="show" type="Sprite" parent="shadow"]
material = SubResource( 11 )
position = Vector2( 888, 338 )
rotation = -0.349066
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 14 )

[node name="Viewport2" type="Viewport" parent="shadow/show"]
process_priority = -8
size = Vector2( 1440, 810 )
transparent_bg = true
render_target_v_flip = true

[node name="temSprite1" type="Sprite" parent="shadow/show/Viewport2"]
material = SubResource( 12 )
position = Vector2( 720, 405 )
rotation = 0.349066
texture = SubResource( 10 )

[node name="Viewport1" type="Viewport" parent="shadow/show/Viewport2/temSprite1"]
process_priority = -9
size = Vector2( 960, 540 )
transparent_bg = true
render_target_v_flip = true

[node name="temSprite2" type="Sprite" parent="shadow/show/Viewport2"]
position = Vector2( 720, 405 )
rotation = 0.349066
texture = SubResource( 15 )

[node name="Viewport1" type="Viewport" parent="shadow/show/Viewport2/temSprite2"]
process_priority = -9
size = Vector2( 960, 540 )
transparent_bg = true
render_target_v_flip = true

[node name="cardBackPartical" type="CanvasLayer" parent="."]
layer = -5

[node name="cardFrontPartical" type="CanvasLayer" parent="."]
layer = 45
